<resources>
    <string name="app_name">Mi_Casa_Amigable</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="btn_iniciar">Iniciar sesión</string>
    <string name="arrobaa">"@"</string>
    <string name="btn_registro">Registrar</string>
    <string name="desc">Descripcion</string>
    <string name="nombre_s">Nombre(s):</string>
    <string name="apellido_paterno">Apellido paterno:</string>
    <string name="apellido_materno">Apellido materno:</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento:</string>
    <string name="sexo">Sexo:</string>
    <string name="pais">País:</string>
    <string name="correo_electronico">Correo electrónico:</string>
    <string name="contrasena">Contraseña:</string>
    <string name="confirmar_contrasena">Confirmar contraseña:</string>
    <string name="registrar">Registrar</string>
    <string-array name="Sexo">
        <item>Prefiero no contestar</item>
        <item>Mujer</item>
        <item>Hombre</item>
    </string-array>
    <string-array name="Correo">
        <item>gmail.com</item>
        <item>hotmail.com</item>
        <item>yahoo.com.mx</item>
        <item>live.com.mx</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>