<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/aqua">

    <fragment
        android:id="@+id/aqua"
        android:name="com.gaby.micasaamigable.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/reciclaje"
        android:name="com.gaby.micasaamigable.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/vidaverde"
        android:name="com.gaby.micasaamigable.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/basura2"
        android:name="com.gaby.micasaamigable.Basura"
        android:label="fragment_basura"
        tools:layout="@layout/fragment_basura" />
    <fragment
        android:id="@+id/comida2"
        android:name="com.gaby.micasaamigable.comida"
        android:label="fragment_comida"
        tools:layout="@layout/fragment_comida" />
</navigation>