<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_registro2"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@color/colorbtnsPantalla1"
        android:onClick="NewRegistro"
        android:text="@string/btn_registro"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.785"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.945" />

    <Button
        android:id="@+id/btn_inicio"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@color/colorbtnsPantalla1"
        android:onClick="CancelReg"
        android:text="Inicio"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.945"
        tools:text="Inicio" />

    <ImageView
        android:id="@+id/casa"
        android:layout_width="411dp"
        android:layout_height="306dp"
        android:contentDescription="@string/desc"
        android:src="@drawable/la_casa_amigable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/login1"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/casa"
        app:layout_constraintVertical_bias="0.494"
        tools:visibility="visible">

        <TextView
            android:id="@+id/user_log"
            android:layout_width="110dp"
            android:layout_height="35dp"
            android:text="Usuario" />

        <EditText
            android:id="@+id/edt_user_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login2"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        tools:visibility="visible">

        <TextView
            android:id="@+id/pass_log"
            android:layout_width="110dp"
            android:layout_height="35dp"
            android:text="Contraseña" />

        <EditText
            android:id="@+id/edt_pass_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/registro1"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.724"
        tools:visibility="gone">

        <TextView
            android:id="@+id/user_reg"
            android:layout_width="110dp"
            android:layout_height="35dp"
            android:text="Usuario" />

        <EditText
            android:id="@+id/edt_user_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/registro2"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83"
        tools:visibility="gone">

        <TextView
            android:id="@+id/pass_reg"
            android:layout_width="110dp"
            android:layout_height="35dp"
            android:text="Contraseña" />

        <EditText
            android:id="@+id/edt_pass_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login3"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975"
        tools:visibility="visible">

        <Button
            android:id="@+id/btn_start"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@color/colorbtnsPantalla1"
            android:onClick="Login"
            android:text="@string/btn_iniciar"
            android:visibility="visible"
            tools:visibility="invisible" />

        <Button
            android:id="@+id/btn_registro"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@color/colorbtnsPantalla1"
            android:onClick="registro"
            android:text="@string/btn_registro"
            android:visibility="visible"
            tools:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/apellidos"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/casa"
        app:layout_constraintVertical_bias="0.618"
        tools:visibility="gone">

        <TextView
            android:id="@+id/last_name"
            android:layout_width="110dp"
            android:layout_height="35dp"
            android:text="Apellido" />

        <EditText
            android:id="@+id/edt_apellido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nombres"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.512"
        tools:visibility="gone">

        <TextView
            android:id="@+id/name"
            android:layout_width="110dp"
            android:layout_height="35dp"
            android:text="Nombre" />

        <EditText
            android:id="@+id/edt_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>